# core-communications

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
include/communications/: communications.h
src/: communications.cpp
